@@ -3,9 +3,7 @@ package com.sap.sailing.mongodb.test;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.UnknownHostException;
 import java.util.HashSet;
@@ -14,6 +12,7 @@ import java.util.Set;
 import org.junit.Test;
 
 import com.mongodb.MongoException;
+import com.sap.sailing.domain.tracking.RaceTracker;
 import com.sap.sailing.domain.tracking.RaceTrackingConnectivityParameters;
 import com.sap.sailing.domain.tractracadapter.DomainFactory;
 import com.sap.sailing.domain.tractracadapter.TracTracConnectionConstants;
@@ -29,12 +28,12 @@ public class TracTracConnectivityParamsLoadAndStoreTest extends AbstractConnecti
     }
 
     @Test
-    public void testStoreAndLoadSimpleTracTracParams() throws MalformedURLException, URISyntaxException {
+    public void testStoreAndLoadSimpleTracTracParams() throws Exception {
         // set up
         final boolean trackWind = true;
         final boolean correctWindDirectionByMagneticDeclination = true;
-        final URL paramURL = new URL("http://tractrac.com/some/url");
-        final URI storedURI = new URI("live://tractrac.com/storedURI");
+        final URL paramURL = new URL("http://event.tractrac.com/events/event_20160604_JuniorenSe/clientparams.php?event=event_20160604_JuniorenSe&race=4b9f0190-0b0d-0134-5b24-60a44ce903c3");
+        final URI storedURI = new URI("http://event.tractrac.com/events/event_20160604_JuniorenSe/datafiles/4b9f0190-0b0d-0134-5b24-60a44ce903c3.mtb");
         final URI courseDesignUpdateURI = new URI("https://skitrac.dk/reverse/update");
         final TimePoint startOfTracking = MillisecondsTimePoint.now();
         final TimePoint endOfTracking = startOfTracking.plus(1000);
@@ -49,12 +48,14 @@ public class TracTracConnectivityParamsLoadAndStoreTest extends AbstractConnecti
                 paramURL, /* live URI */ null, storedURI, courseDesignUpdateURI, startOfTracking, endOfTracking,
                 delayToLiveInMillis, offsetToStartTimeOfSimulatedRace, useInternalMarkPassingAlgorithm,
                 /* raceLogStore */ null, /* regattaLogStore */ null, DomainFactory.INSTANCE, tracTracUsername, tracTracPassword,
-                raceStatus, raceVisibility, trackWind, correctWindDirectionByMagneticDeclination);
+                raceStatus, raceVisibility, trackWind, correctWindDirectionByMagneticDeclination, /* preferReplayIfAvailable */ false,
+                /* timeoutInMillis */ (int) RaceTracker.TIMEOUT_FOR_RECEIVING_RACE_DEFINITION_IN_MILLISECONDS);
         // store
         mongoObjectFactory.addConnectivityParametersForRaceToRestore(tracTracParams);
         // load
         final Set<RaceTrackingConnectivityParameters> connectivityParametersForRacesToRestore = new HashSet<>();
-        domainObjectFactory.loadConnectivityParametersForRacesToRestore(params->connectivityParametersForRacesToRestore.add(params));
+        domainObjectFactory.loadConnectivityParametersForRacesToRestore(params->connectivityParametersForRacesToRestore.add(params))
+            .waitForCompletionOfCallbacksForAllParameters();
         // compare
         assertEquals(1, Util.size(connectivityParametersForRacesToRestore));
         final RaceTrackingConnectivityParameters paramsReadFromDB = connectivityParametersForRacesToRestore.iterator().next();
@@ -78,7 +79,8 @@ public class TracTracConnectivityParamsLoadAndStoreTest extends AbstractConnecti
         // remove again
         mongoObjectFactory.removeConnectivityParametersForRaceToRestore(tracTracParams);
         final Set<RaceTrackingConnectivityParameters> connectivityParametersForRacesToRestore2 = new HashSet<>();
-        domainObjectFactory.loadConnectivityParametersForRacesToRestore(params->connectivityParametersForRacesToRestore2.add(params));
+        domainObjectFactory.loadConnectivityParametersForRacesToRestore(params->connectivityParametersForRacesToRestore2.add(params))
+            .waitForCompletionOfCallbacksForAllParameters();
         assertTrue(connectivityParametersForRacesToRestore2.isEmpty());
     }
 }
